version/0.31/_sources/api/solver/_autosummary/settings/surface_tension_child_child.rst.txt
:orphan:

.. _surface_tension_child_child:

surface_tension_child_child
===========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.surface_tension_child_child
    :show-inheritance:

.. rubric:: Attributes

==================================   =================================

Attribute                                                      Summary

==================================   =================================
:ref:`option <option_2>`                 The methods for surf-tension.

:ref:`constant <constant>`                             Constant value.

:ref:`user_defined <user_defined>`                           Prop udf.

==================================   =================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`surface_tension_child <surface_tension_child>`       'child_object_type' of surface_tension.

====================================================   ===========================================

