version/0.37/_sources/api/solver/_autosummary/settings/surface_tension_child_child.rst.txt
:orphan:

.. _surface_tension_child_child:

surface_tension_child_child
===========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.surface_tension_child_child
    :show-inheritance:

.. rubric:: Attributes

========================================================   =================================

Attribute                                                                            Summary

========================================================   =================================
:ref:`option <option_4>`                                       The methods for surf-tension.

:ref:`constant <constant>`                                                   Constant value.

:ref:`user_defined <user_defined_2>`                                               Prop udf.

:ref:`surface_tension_rgp <surface_tension_rgp>`                        Surface tension RGP.

:ref:`polynomial <polynomial>`                                              Polynomial f(T).

:ref:`sf_piecewise_polynomial <sf_piecewise_polynomial>`       Piecewise-polynomial sf f(T).

:ref:`sf_piecewise_linear <sf_piecewise_linear>`                   Piecewise-linear sf f(T).

========================================================   =================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`surface_tension_child <surface_tension_child>`       'child_object_type' of surface_tension.

====================================================   ===========================================

